Lesson 3: Add news(api)
