# merch_shop/app/Http/Resources/NewsResources.php
@@ -1,0 +1,24 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class NewsResources extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return array|\Illuminate\Contracts\Support\Arrayable|\JsonSerializable
+     */
+    public function toArray($request)
+    {
+        return [
+            'published_at' => $this->published_at,
+            'title' => $this->title,
+            'slug' => $this->slug,
+            'text' => $this->text,
+        ];
+    }
+}
