# merch_shop/app/Models/News.php
@@ -3,12 +3,16 @@
 namespace App\Models;
 
 use Cviebrock\EloquentSluggable\Sluggable;
+use Illuminate\Database\Eloquent\Builder;
 use Illuminate\Database\Eloquent\Factories\HasFactory;
 use Illuminate\Database\Eloquent\Model;
+use Illuminate\Support\Carbon;
 
 class News extends Model
 {
     use HasFactory, Sluggable;
+
+    protected $dates = ['published_at'];
 
     public function sluggable(): array
     {
@@ -17,5 +21,10 @@ class News extends Model
                 'source' => 'title'
             ]
         ];
+    }
+
+    public function scopePublished(Builder $builder) : Builder
+    {
+        return $builder->where('published_at', '<', Carbon::now());
     }
 }
